--- a/assets/css/dashboard.css
+++ b/assets/css/dashboard.css
@@ -6,6 +6,7 @@
     box-sizing: border-box;
     font-family: 'Poppins', sans-serif;
     text-decoration: none;
+    color: #000;
 }
 body{
     min-height: 100vh;
@@ -72,7 +73,9 @@ body{
     -webkit-backdrop-filter: blur(5px);
 }
 
-
+.label-form{
+    width: 100px;
+}
 label{
     height: 25px;
     width: 25px;
